sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value i
      if (plusPetit(i+1,i))
                    ^AlgCocktailSort1:7: error: not found: value i
      if (plusPetit(i+1,i))
                        ^AlgCocktailSort1:8: error: not found: value i
      	echange(i,i+1)
                ^AlgCocktailSort1:8: error: not found: value i
      	echange(i,i+1)
                  ^AlgCocktailSort1:12: error: not found: value i
      if (plusPetit(i-1,i))
                    ^AlgCocktailSort1:12: error: not found: value i
      if (plusPetit(i-1,i))
                        ^AlgCocktailSort1:13: error: not found: value i
      	echange(i-1,i)
                ^AlgCocktailSort1:13: error: not found: value i
      	echange(i-1,i)
                    ^